sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value value
			while ((j > 0) && (!plusPetitQue(j-1,value))) {
                                                             ^